# examples

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  gitleaks.toml  lychee.toml
docs/: architecture.md  coverage-matrix.md  harness.md  rollout-checklist.md  troubleshooting.md
dotnet/: .env.example  .gitignore  Directory.Build.props  Pagou.Examples.sln  README.md  coverage.json
go/: .gitignore  README.md  coverage.json  go.mod
java/: .env.example  .gitignore  README.md  coverage.json  pom.xml
php/: .gitignore  README.md  composer.json  coverage.json  phpunit.xml.dist
python/: .env.example  .gitignore  README.md  coverage.json  pyproject.toml
python/checkout-links/: README.md  create.py
python/pagou/: __init__.py  config.py  errors.py  format.py  http.py  logger.py  reconcile.py  types.py
python/payments/: README.md  create_card.py  create_pix.py  create_voucher.py  demo_data.py  list_transactions.py  reconcile.py  refund.py  retrieve.py  sandbox_advance.py
python/payments/card_element/: server.py
python/subscriptions/: README.md  customers.py  lifecycle.py
python/tests/: conftest.py  test_http.py  test_logger.py  test_reconcile.py  test_webhooks.py
python/transfers/: README.md  lifecycle.py
python/webhooks/: README.md  handlers.py  processor.py  server.py  store.py
ruby/: .gitignore  .rubocop.yml  Gemfile  README.md  Rakefile  coverage.json
typescript/: .gitignore  README.md  coverage.json  package-lock.json  package.json  tsconfig.json  (+1 more)
(+282 files in other folders)
