[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pagou-examples-python"
version = "1.0.0"
description = "Runnable Python reference examples for the Pagou API v2 core flows."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["pagou"]

[tool.pytest.ini_options]
pythonpath = [".", "webhooks"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pagou", "webhooks"]
